# kvcompress

./: .gitignore  .venv-info  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  lint.yaml  type.yaml
.hypothesis/constants/: 0690f1346216d08e  09490e6054831e4c  0abcdddba8f9180c  0e34485d31e5cfd5  12219d282ab747a0  26778292474e636d  2954b2823f95eeda  2ffdd344b29564ba  4b3aaf7ebd24e245  53bf1b68c67680c1  547761864ea3ed45  5ca1f5d09f5d03fd  68f337655567fbb9  6ab129aa149baca0  734fb262fe99edc9  84da7f7176f5aeb6  85720d3754c3ad74  95214127c5e559ba  95a0b7fcd30426ee  9ae5b5a5a9fe328d  9cb07ff4785cdd82  ad2c63af285a334c  b91afb8ba5bdacbe  bc7e88c939c28e95  c24003b6e4aa0570  c5108ce4b5279b38  c9a74bae6704d3f5  d1aeb0cce7469f91  d88f99642bb0ab65  e50c50ef503fab91  eb094569d4061c75  f177f92e978f8649  f9129907df608da4
configs/: default.yaml
docs/: index.md  quickstart.md
docs/benchmarks/: results.md
docs/research/: paper_notes.md
docs/user/: api.md  installation.md  performance_guide.md
examples/: 02_direct_compression.py
kvcompress/: __init__.py,cover  api.py  api.py,cover  cli.py  cli.py,cover
kvcompress/adapters/: __init__.py  __init__.py,cover  deepseek.py,cover  falcon.py,cover  gemma.py,cover  huggingface.py  huggingface.py,cover  internlm.py,cover  llama.py,cover  mistral.py,cover  mixtral.py,cover  phi.py,cover  qwen.py,cover  registry.py,cover  vllm.py  vllm.py,cover  vllm_kv_offload.py  vllm_kv_offload.py,cover
kvcompress/benchmarks/: memory.py  reconstruction.py  throughput.py
kvcompress/cache/: __init__.py,cover  compress.py  compress.py,cover  manager.py,cover  metadata.py  metadata.py,cover
kvcompress/compressor/: __init__.py  __init__.py,cover  allocator.py  allocator.py,cover  base.py,cover  dispatch.py  dispatch.py,cover  flashjolt.py  flashjolt.py,cover  identity.py  identity.py,cover  jl.py  jl.py,cover  jolt.py  jolt.py,cover  lowrank.py  lowrank.py,cover  quantization.py  quantization.py,cover  quantization_only.py  quantization_only.py,cover  residual.py  residual.py,cover  svd.py  svd.py,cover  tucker.py,cover
kvcompress/kernels/: __init__.py,cover
kvcompress/kernels/triton/: __init__.py,cover  compression.py,cover  tucker_reconstruct.py,cover
kvcompress/runtime/: __init__.py,cover  memory.py,cover  profiler.py,cover
results/: README.md  memory.json  reconstruction.json  speed.json
scripts/: reproduce_paper_numbers.sh  sweep_compression_ratio.py  validate_install.py
src/kvcompress/: __init__.py  api.py  cli.py
src/kvcompress/adapters/: __init__.py  deepseek.py  falcon.py  gemma.py  huggingface.py  internlm.py  llama.py  mistral.py  mixtral.py  phi.py  qwen.py  registry.py  vllm.py  vllm_kv_offload.py
src/kvcompress/benchmarks/: __init__.py  memory.py  plot.py  reconstruction.py  throughput.py
src/kvcompress/cache/: __init__.py  compress.py  manager.py  metadata.py
src/kvcompress/compressor/: __init__.py  allocator.py  base.py  flashjolt.py  identity.py  jl.py  jolt.py  lowrank.py  quantization.py  quantization_only.py  residual.py  svd.py  tucker.py
src/kvcompress/kernels/: __init__.py
src/kvcompress/kernels/triton/: __init__.py  compression.py  tucker_reconstruct.py
src/kvcompress/runtime/: __init__.py  memory.py  profiler.py
tests/integration/: test_gpt2.py
tests/property/: test_properties.py
tests/unit/: adapter_test.py  algorithmic_allocator_test.py  algorithmic_jl_quant_test.py  algorithmic_jolt_test.py  algorithmic_tucker_test.py  allocator_test.py  cli_test.py  compressor_jolt_test.py  dispatch_test.py  family_shims_test.py  identity_test.py  jl_test.py  kernels_test.py  metadata_algorithmic_test.py  quantization_test.py  residual_algorithmic_test.py  residual_test.py  runtime_test.py  submodule_lazy_test.py  svd_test.py  test_adapters_init_lazy.py  test_allocator_extra.py  test_cli_extended.py  test_residual_extra.py  test_submodule_lazy.py  tucker_test.py  vllm_kv_offload_test.py  vllm_test.py
