[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "kvcompress"
version = "0.1.0"
description = "Universal plug-and-play KV cache compression for decoder-only LLMs. Implements JoLT and FlashJoLT (partial Tucker decomposition + JL residual + joint Lagrangian allocation)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "kvcompress contributors" },
]
keywords = ["kv-cache", "compression", "tucker", "llm", "transformer", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.5",
    "transformers>=4.45",
    "accelerate>=0.34",
    "numpy>=1.26",
    "scipy>=1.13",
    "einops>=0.8",
    "safetensors>=0.4",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
triton = ["triton>=3.0"]
vllm = ["vllm>=0.6"]
bench = ["matplotlib>=3.9", "pandas>=2.2", "datasets>=2.20"]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.105",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.scripts]
kvcompress = "kvcompress.cli:app"

[project.urls]
Homepage = "https://github.com/anomalyco/kvcompress"
Paper = "https://arxiv.org/abs/2607.12550"
Issues = "https://github.com/anomalyco/kvcompress/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kvcompress"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "docs", "README.md", "LICENSE", "AGENTS.md"]

[tool.hatch.version]
path = "src/kvcompress/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "examples", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
    "PT", "TID", "ARG", "PL",
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value
    "B008",     # do not call function in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR0915", "N806", "ARG"]
"examples/**/*.py" = ["E402"]
"src/kvcompress/kernels/triton/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/kvcompress"]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require model downloads",
    "gpu: marks tests that require a CUDA device",
]
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::DeprecationWarning:huggingface_hub.*",
    "ignore::FutureWarning:transformers.*",
]

[tool.coverage.run]
source = ["src/kvcompress"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "hypothesis", "ruff", "mypy"]
