[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcompress"
version = "0.1.0"
description = "Universal plug-and-play KV cache compression for decoder-only LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "sachin", email = "sachncs@gmail.com" }]
keywords = ["kv-cache", "compression", "transformers", "llm", "tucker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.5,<3",
    "transformers>=4.45,<5",
    "typer>=0.12",
    "numpy>=1.26,<2",
    "safetensors>=0.4",
]

[project.optional-dependencies]
vllm = ["vllm>=0.7,<2"]
triton = ["triton>=2.2"]
bench = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "datasets>=2.14",
]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.10",
    "vulture>=2.11",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9",
]

[project.scripts]
kvcompress = "kvcompress.cli:app"

[project.urls]
Homepage = "https://github.com/sachncs/kvcompress"
Paper = "https://arxiv.org/abs/2607.12550"
Changelog = "https://github.com/sachncs/kvcompress/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvcompress*"]
exclude = ["configs*", "tests*", "examples*", "scripts*", "docs*"]

[tool.setuptools.package-data]
"kvcompress" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["kvcompress", "tests", "examples", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
    "PT", "TID", "ARG", "PL",
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value
    "B008",     # do not call function in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR0915", "N806", "ARG"]
"examples/**/*.py" = ["E402"]
"kvcompress/kernels/triton/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = false
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["kvcompress"]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "triton.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vllm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kvcompress.adapters.huggingface"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.kernels.triton.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.adapters.registry"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.adapters.vllm"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.adapters.vllm_kv_offload"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.benchmarks.*"
ignore_errors = true

# Vulture configuration.
# 80% confidence floor: vulture's 60% findings flag a lot of internal-but-useful
# symbols (lazy-export __getattr__, dataclass field names, subcommands exposed
# elsewhere). We exclude the patterns that consistently produce noise.
[tool.vulture]
min_confidence = 80
paths = ["kvcompress"]
exclude_patterns = [
    # ``if False: ... # TYPE_CHECKING`` is intentional — used by lazy-export
    # subpackages so the public surface is importable even when modules are
    # mid-edit. vulture flags the unsatisfiable ``if`` at 100% confidence.
    "*/__init__.py",
    # Stub / abstract methods that subclasses fill in.
    "kvcompress/compressor/base.py",
    # Properties / dataclass field names (vulture's string match is
    # imprecise on dataclass-heavy modules).
    "kvcompress/compressor/tucker.py",
    # Tests have dead helpers we don't care about.
    "tests/",
    # Benchmarks have dead CLI plumbing (version, validate, profile subcommands
    # are also exposed through kvcompress.cli but vulture sees them as unused
    # inside benchmarks/*).
    "kvcompress/benchmarks/",
]

[tool.coverage.run]
source = ["kvcompress"]
branch = false
omit = [
    "kvcompress/benchmarks/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require model downloads",
    "gpu: marks tests that require a CUDA device",
]
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::DeprecationWarning:huggingface_hub.*",
    "ignore::FutureWarning:transformers.*",
]